# engineering-team-agent

./: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
scripts/: check_docker.sh  setup.sh  verify.sh
src/engineering_team_agent/: __init__.py  app.py  crew.py  main.py
src/engineering_team_agent/config/: __init__.py  agents.yaml  tasks.yaml
src/engineering_team_agent/tools/: __init__.py  custom_tool.py
tests/: __init__.py  conftest.py  test_app.py  test_crew.py  test_integration.py  test_main.py
